# powerflow

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PROJECT.md  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  node-ci.yml  python-ci.yml
.local/: .gitignore  .gitignore.template  AUDIT-GATES.md  CLAUDE.md  NIMBUS.md  OPENCLAW.md  README.md
.local/claude/: BEST_PRACTICES_2026.md  README.md  settings.example.json
.local/claude/commands/: init.md  ship.md  stack.md
.local/claude/knowledge-base/: architecture-patterns.md  business-logic.md  debugging-patterns.md  feature-research-2026-02.md  git-patterns.md  lessons-learned.md  lessons-upkeep-2026-02.md  macos-patterns.md  market-research.md  notion-api-reference.md  pocket-api-reference.md  project-context.md  tech-stack-decisions.md  v0.2-design.md
.local/claude/rules/: ai-coding.md  code-quality-tools.md  context-management.md  continuous-improvement.md  (+14 more)
.local/docs/: ADR.md.template  CHANGELOG.md.template  LOCAL_DEV.md.template  PROJECT.md.template  STACK_DECISION.md.template
.local/scripts/: context-pack.sh  doctor.sh  install-hooks.sh  verify.sh
src/powerflow/: __init__.py  __main__.py  blocks.py  cli.py  config.py  daemon.py  models.py  notion.py  pocket.py  sync.py
tests/: __init__.py  test_batch_dedup.py  test_blocks.py  test_cli_validation.py  test_config.py  test_daemon.py  test_daemon_fixes.py  test_edge_cases.py  test_incremental_sync.py  test_models.py  test_notion.py  test_pocket.py  test_reliability.py  test_tags_sync.py
(+13 files in other folders)
