[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerflow"
version = "0.5.0"
description = "Sync Pocket AI action items and summaries to Notion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Steve Zenone", email = "5834392+zenone@users.noreply.github.com" }
]
keywords = ["pocket-ai", "notion", "sync", "productivity", "action-items"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
powerflow = "powerflow.cli:main"

[project.urls]
Homepage = "https://github.com/zenone/powerflow"
Repository = "https://github.com/zenone/powerflow"
Issues = "https://github.com/zenone/powerflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/powerflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
